[package]
name = "root"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
educe = "0.6.0"
serde = { version = "1.0.204", features = ["derive"], optional = true }
serde_json = "1.0.120"
serde_with = { version = "3.9.0", optional = true }
cfg-if = "1.0.0"
thiserror = "1.0.63"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_with"]