[package]
name = "root"
version = "0.1.1"
edition = "2021"
license-file = "../LICENSE"
keywords = ["routing", "network", "io-free"]
categories = ["network-programming"]
repository = "https://github.com/encodeous/root"
readme = "../README.md"
description = "root is an abstract I/O free routing protocol"

[dependencies]
anyhow = "1.0.86"
educe = "0.6.0"
serde = { version = "1.0.204", features = ["derive"], optional = true }
serde_json = "1.0.120"
serde_with = { version = "3.9.0", optional = true }
cfg-if = "1.0.0"
thiserror = "1.0.63"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_with"]