[package]
name = "simple-mesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
root = { path = "../../root" }
net-route = "0.4.4"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.120"
netdev = "0.30.0"
anyhow = "1.0.86"
rustyline = "14.0.0"
inquire = "0.7.5"
simplelog = "0.12.2"
log = "0.4.22"
