[package]
name = "simple-mesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
root = { path = "../../root" }
net-route = "0.4.4"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.120"
netdev = "0.30.0"
anyhow = "1.0.86"
rustyline = "14.0.0"
inquire = "0.7.5"
log = "0.4.22"
futures = "0.3.30"
tokio-util = {version = "0.7.11", features = ["full"]}
uuid = { version = "1.10.0", features = ["v4", "serde"] }
serde_with = "3.9.0"
env_logger = "0.11.5"
crossbeam-channel = "0.5.13"